添加SchedulerWatcher